# BoronGameEngine

./: BoronGameEngine.h  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Compile_Shaders.bat  LICENSE.txt  NOTES  NOTESInFinnish  README.md  main.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
BoronEngine/Savings/ProjectTest1/: World.json
Core/BoronPhysics/: Physics.cpp  Physics.h
Core/Camera/: Camera.cpp  Camera.h
Core/Debugging/Functions/: ASSERT.h  BGE_ASSERTS.h  UGE_ASSERTS.h
Core/Debugging/Profiler/: Profiler.cpp  Profiler.h
Core/ErrorHandling/: ErrorMessage.h
Core/ErrorHandling/Error/: ErrorCodes.h
Core/Graphics/: Graphics.cpp  Graphics.h  GraphicsBackends.h  GraphicsSettings.h  IRenderer.h
Core/Graphics/Dx11/: Dx11Adapter.cpp  Dx11Adapter.h  Dx11Renderer.cpp  Dx11Renderer.h
Core/Graphics/Texture/: Texture.cpp  Texture.h
Core/Graphics/Vulkan/: ScoreCounter.cpp  ScoreCounter.h  VulkanAdapter.cpp  VulkanAdapter.h  VulkanBuilderInit.cpp  VulkanBuilderInit.h  VulkanRender.cpp  VulkanRender.h
Core/Graphics/Vulkan/VulkanCommandBuffer/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.h
Core/Graphics/Vulkan/VulkanDevice/: VulkanDevice.cpp  VulkanDevice.h
Core/Graphics/Vulkan/VulkanInstance/: VulkanInstance.cpp  VulkanInstance.h
Core/Graphics/Vulkan/VulkanPipeline/: VulkanPipeline.cpp  VulkanPipeline.h
Core/Graphics/Vulkan/VulkanSwapchain/: VulkanSwapchain.cpp  VulkanSwapchain.h
Core/Gui/: ImGuiManager.cpp  MakeGui.cpp
Core/Input/Keyboard/: Keyboard.cpp  Keyboard.h
Core/Input/Mouse/: Mouse.cpp  Mouse.h
Core/Instances/: Instance.h  Vertex.h
Core/Instances/Instances/: Object.h  Script.h
Core/Instances/Instances/Mesh/: Mesh.cpp  Mesh.h
Core/Instances/Instances/Mesh/DX11/: MeshDX11.cpp  MeshDX11.h
Core/Instances/Instances/Mesh/Vulkan/: MeshVulkan.cpp  MeshVulkan.h
Core/Libs/Assimp/include/assimp/: BaseImporter.h  SGSpatialSort.h  SceneCombiner.h  SmoothingGroups.h  SpatialSort.h  StandardShapes.h  Vertex.h  anim.h  config.h  material.h  mesh.h  postprocess.h  scene.h
Core/Libs/Assimp/samples/SimpleAssimpViewX/: ModelLoaderHelperClasses.h
Core/Libs/Assimp/samples/SimpleTexturedDirectx11/SimpleTexturedDirectx11/: Mesh.h  ModelLoader.cpp
Core/Libs/Assimp/samples/SimpleTexturedOpenGL/SimpleTexturedOpenGL/src/: model_loading.cpp
Core/Libs/ImGui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imstb_truetype.h
Core/Libs/ImGui/backends/: imgui_impl_allegro5.cpp  imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlgpu3.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_wgpu.cpp
Core/Libs/SDL3/: SDL.h  SDL_assert.h  SDL_asyncio.h  SDL_atomic.h  SDL_audio.h  SDL_begin_code.h  SDL_camera.h  SDL_clipboard.h  SDL_close_code.h  SDL_cpuinfo.h  SDL_dialog.h  SDL_dlopennote.h  SDL_endian.h  SDL_events.h  SDL_filesystem.h  SDL_gamepad.h  SDL_gpu.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_init.h  SDL_intrin.h  SDL_iostream.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_log.h  SDL_main.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_pen.h  SDL_pixels.h  SDL_power.h  SDL_process.h  SDL_properties.h  SDL_rect.h  SDL_render.h  SDL_stdinc.h  SDL_storage.h  (+9 more)
Core/Libs/STBIcons/: stb_image.h
Core/Misc/Colission/: Colission.cpp
Core/Misc/Controller/: Controller.cpp
Core/Misc/Profiler/: Profiler.h
Core/Misc/Saving/: SaveProject.cpp  SaveProject.h
Core/Misc/Timer/: Timer.cpp
Core/Runtime/: Engine.cpp  Engine.h
Core/Services/: Raycasting.cpp  Raycasting.h
Core/SetupPaths/: MakeFiles.cpp  MakeFiles.h
Core/Shaders/: PixelShader.hlsl  PixelShaderTexture.hlsl  VertexShader.hlsl  fragment.spv  shadow.spv  texture_fragment.spv  vertex.spv
Core/Shaders/Source/: fragment.glsl  fragshadow.glsl  shadow.glsl  texture_fragment.glsl  vertex.glsl
Core/UntilitedPhysics/: Physics.cpp  Physics.h
Core/Variables/: Enums.h  GLOBALS.cpp  GLOBALS.h
Core/Vulkan/: VulkanHelpers.h
Core/Window/: Window.cpp  Window.h
Editor/Camera/: CameraControl.cpp  CameraControl.h
Editor/Gui/: Image2d.cpp  Image2d.h  MakeGui.cpp  MakeGui.h  Style.cpp  Style.h
Editor/Services/: Raycasting.cpp
Shaders/: fragment.spv  vertex.spv
docs/: ChangeLog.txt  NOTESInFinnish.txt  ToDoList.txt
include/: CameraControl.h  Colission.h  Controller.h  Expection.h  GLOBALS.h  ImGuiManager.h  Includer.h  Instance.h  Keyboard.h  MakeGui.h  Mesh.h  Object.h  Raycasting.h  World.h
include/Math/: FLOAT2.h  FLOAT3.h  FLOAT4.h  INT3.h  M_Utils.h  Matrix4x4.h  UntilitedMath.h  Vector3.h  Vector4.h
